# tabular-chat-predictor

./: .gitignore  README.md  SEPARATION_PLAN.md  convert_dataset.py  pyproject.toml  requirements.txt  run-dfs.sh  setup.py  streamlit_chat_predictor_new.py
refactor_plan/: 002_refactor_interface_design.md  003_refactor_interface_design copy.md  003_refactor_interface_design.md  005_TASK_TABLE_REMOVAL_PLAN.md  Data Processing Pipeline Summary.md  fast_dfs.md  refactor_interface_design.md  refactor_plan.md  review_003.md  stage1-materialize_task_tables.md  stage2-fast-dfs.md  stage3-tabpfn-training-prediction.md
tabular_chat_predictor/: __init__.py  coding_assistant_prompt.jinja  schema_to_mermaid.py  training_labels_prompt.jinja
tabular_chat_predictor/agents/: __init__.py  base_agent.py  coding_assistant.py  llm_client.py  orchestrator.py  predicting_assistant.py
tabular_chat_predictor/compute/: __init__.py  compute_engine.py  dataset_loader.py  repl_manager.py  tabpfn_manager.py  tabpfn_predictor.py
tabular_chat_predictor/core/: USING_TOOLS.md  __init__.py  protocols.py  tool.py  tool_registry.py
tabular_chat_predictor/frontends/: __init__.py  console_frontend.py  streamlit_frontend.py
tabular_chat_predictor/icl_examples/: icl_examples.json  icl_examples_exploratory.json
tabular_chat_predictor/icl_examples/amazon/: item_churn.py  item_ltv.py  sample_rows.py  schema.yaml  user_churn.py  user_ltv.py
tabular_chat_predictor/icl_examples/stack/: find_latest_post_time.py  post_votes.py  schema.yaml  user_badge.py  user_engagement.py
tabular_chat_predictor/interfaces/: __init__.py  console_interface.py  streamlit_interface.py
tabular_chat_predictor/templates/: orchestrator_prompt.jinja  predictive_query_prompt.jinja
