[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-chat-predictor"
version = "0.1.0"
description = "Interactive LLM-driven predictive analytics for tabular data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tabular Chat Predictor Team"}
]
keywords = ["machine learning", "tabular data", "prediction", "llm", "chat", "tabpfn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core ML & TabPFN
    "tabpfn",
    "tabpfn-extensions[all]",
    "scikit-learn",
    
    # LLM Integration
    "litellm",
    "jinja2",
    "pydantic",
    
    # UI Components
    "streamlit",
    "streamlit-mermaid",
    "rich",
    "prompt-toolkit",
    
    # Data Processing
    "pandas",
    "numpy",
    "duckdb",
    "pyyaml",
    
    # Python Environment & Visualization
    "ipython",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/your-org/tabular-chat-predictor"
Repository = "https://github.com/your-org/tabular-chat-predictor"
Documentation = "https://github.com/your-org/tabular-chat-predictor#readme"
"Bug Tracker" = "https://github.com/your-org/tabular-chat-predictor/issues"

[project.scripts]
tabular-chat-predictor = "tabular_chat_predictor.frontends.console_frontend:main"
tabular-chat-streamlit = "tabular_chat_predictor.frontends.streamlit_frontend:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabular_chat_predictor*"]

[tool.setuptools.package-data]
tabular_chat_predictor = [
    "templates/*.jinja",
    "*.jinja",
    "icl_examples/*.json",
    "icl_examples/amazon/*",
    "icl_examples/stack/*",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true